<resources>
    <string name="app_name">NYT Article</string>
    <string name="nyt_title">NYT</string>
    <string name="search">Search</string>
    <string name="search_articles">Search Articles</string>
    <string name="popular">Popular</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="most_shared">Most Shared</string>
    <string name="most_emailed">Most Emailed</string>
    <string name="search_articles_hint">Search articles here ..</string>
    <string name="articles">Articles</string>
    <string name="title_placeholder">Title</string>
    <string name="pub_date_placeholder">Date Published</string>
    <string name="empty_search_error">This field cannot be empty.</string>
    <string name="home">Home</string>
</resources>