<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    android:background="@color/primary_color">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color_dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/nyt_title"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/searchArticles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_articles"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward_arrow"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/search_articles"
            app:tint="@color/black"
            android:padding="5dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/mostViewed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_viewed"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward_arrow"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/most_viewed"
            android:padding="5dp"
            app:tint="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/mostShared"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_shared"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward_arrow"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/most_shared"
            app:tint="@color/black"
            android:padding="5dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/mostEmailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_emailed"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward_arrow"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/most_emailed"
            app:tint="@color/black"
            android:padding="5dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

</LinearLayout>